Fix navbar dropdown on tablet

--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -29,8 +29,8 @@ body
   max-width: $body-width
   display: flex
   flex-direction: column
-  padding-left: 4rem
-  padding-right: 4rem
+  padding-left: 2rem
+  padding-right: 2rem
   margin-top: 0
   margin-left: auto
   margin-right: auto
@@ -60,6 +60,7 @@ main
 
 .post-summary
   .thumbnail
+    max-height: 18rem
     max-width: 32rem
 
   .meta
